add backend prediction and front-end user form

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# dependencies
+front-end/node_modules
+
+# production
+front-end/build
+
+# misc
+.DS_Store
